# OpenGLCherno

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGLCherno.sln
OpenGLCherno/: CMakeLists.txt  OpenGLCherno.vcxproj  OpenGLCherno.vcxproj.filters  imgui.ini
OpenGLCherno/res/shaders/: Basic.shader
OpenGLCherno/src/: Application.cpp  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
